--- a/meusite/pilotos/templates/pilotos/pilotos_archive.html
+++ b/meusite/pilotos/templates/pilotos/pilotos_archive.html
@@ -1,8 +1,24 @@
 {% extends "base.html" %}
 {% block breadcrumb %}
-    <li class="breadcrumb-item active" aria-current="page">Pilotos</li>
+<li class="breadcrumb-item active" aria-current="page">Pilotos</li>
 {% endblock %}
 {% block content %}
+    {% if messages %}
+        {% for message in messages %}
+            {% if "permissão" in message|lower %}
+                <script>
+                    $(document).ready(function() {
+                        $(".modal-body").text("{{ message }}");
+                        $("#messageModal").modal('show');
+                    });
+                </script>
+            {% else %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    {{ message }}
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
     <style>
         .btn-extra-small {
             padding: 0px 2px;
